--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -32,4 +32,4 @@ jobs:
 
       # Step 3: Run Docker container to execute tests
       - name: Run tests inside Docker container
-        run: docker run -rm anshultaklikar/docker-react npm run test -- --coverage
+        run: docker run --rm anshultaklikar/docker-react npm run test -- --coverage
