Made changes in Github actions file

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -12,24 +12,16 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
-    services:
-      docker:
-        image: docker:19.03.12
-        options: --privileged
-        ports:
-          - 2375:2375
-        volumes:
-          - /var/run/docker.sock:/var/run/docker.sock
-
+    # Optional: You can check Docker version and info
     steps:
-      # Step 1: Checkout the code
+      - name: Check Docker version
+        run: docker --version
+
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # Step 2: Build Docker image
       - name: Build Docker image
         run: docker build -t anshultaklikar/docker-react -f Dockerfile.dev .
 
-      # Step 3: Run Docker container to execute tests
       - name: Run tests inside Docker container
-        run: docker run anshultaklikar/docker-react npm run test -- --coverage
+        run: docker run -e CI=true anshultaklikar/docker-react npm run test
