--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -24,4 +24,4 @@ jobs:
         run: docker build -t anshultaklikar/docker-react -f Dockerfile.dev .
 
       - name: Run tests inside Docker container
-        run: docker run anshultaklikar/docker-react npm run test -- --coverage
+        run: docker run -e CI=true anshultaklikar/docker-react npm run test -- --coverage
