Made changes in config for deployment

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -25,3 +25,17 @@ jobs:
 
       - name: Run tests inside Docker container
         run: docker run -e CI=true anshultaklikar/docker-react npm run test -- --coverage
+
+      # Step 4: Deploy to AWS Elastic Beanstalk
+      # Only run deployment on push to main branch
+      - name: Deploy to AWS Elastic Beanstalk
+        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+        uses: einaregilsson/beanstalk-deploy@v21
+        with:
+          aws_access_key: ${{ secrets.AWS_ACCESS_KEY }}
+          aws_secret_key: ${{ secrets.AWS_SECRET_KEY }}
+          application_name: "docker-react"
+          environment_name: "Docker-react-env"
+          region: "ap-south-1"
+          version_label: ${{ github.sha }}
+          deployment_package: Dockerfile
