--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -9,74 +9,50 @@ on:
       - main
 
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # Build test image
-      - name: Build Docker image
+      # Build and test
+      - name: Build Docker image for testing
         run: docker build -t anshultaklikar/docker-react -f Dockerfile.dev .
 
-      # Run tests
-      - name: Run tests inside Docker container
+      - name: Run tests
         run: docker run -e CI=true anshultaklikar/docker-react npm run test -- --coverage
 
-      # # Build production image
-      # - name: Build production Docker image
-      #   if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-      #   run: docker build -t anshultaklikar/docker-react .
+      # Build production image
+      - name: Build production Docker image
+        run: docker build -t anshultaklikar/docker-react .
 
-      # # Create deployment package
-      # - name: Generate deployment package
-      #   run: |
-      #     zip -r deploy.zip . -x '*.git*'
-
-      # # Configure AWS credentials
-      # - name: Configure AWS credentials
-      #   uses: aws-actions/configure-aws-credentials@v1
-      #   with:
-      #     aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
-      #     aws-secret-access-key: ${{ secrets.AWS_SECRET_KEY }}
-      #     aws-region: ap-south-1
-
-      # # Deploy to EB
-      # - name: Deploy to AWS Elastic Beanstalk
-      #   if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-      #   uses: einaregilsson/beanstalk-deploy@v21
-      #   with:
-      #     aws_access_key: ${{ secrets.AWS_ACCESS_KEY }}
-      #     aws_secret_key: ${{ secrets.AWS_SECRET_KEY }}
-      #     application_name: "docker-react-app"    # Make sure this matches your EB application name
-      #     environment_name: "Docker-react-env"    # Make sure this matches your EB environment name
-      #     region: "ap-south-1"
-      #     version_label: "docker-react-${{ github.sha }}"
-      #     deployment_package: deploy.zip
-
-  deploy:
-    needs: build
-    runs-on: ubuntu-latest
-
-    steps:
-      # Step 1: Checkout the code
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      # Step 2: Configure AWS credentials
+      # Configure AWS credentials
       - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v
+        uses: aws-actions/configure-aws-credentials@v2
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_KEY }}
           aws-region: ap-south-1
 
-      # Step 3: Deploy to AWS Elastic Beanstalk
-      - name: Deploy to Elastic Beanstalk
+      # Create deployment package
+      - name: Generate deployment package
+        run: zip -r deploy.zip .
+
+      # Upload to S3
+      - name: Upload to S3
         run: |
-          zip -r app.zip .
-          aws elasticbeanstalk create-application-version --application-name "docker-react" \
-            --version-label ${{ github.sha }} --source-bundle S3Bucket=elasticbeanstalk-ap-south-1-798114842310,S3Key=app.zip
-          aws elasticbeanstalk update-environment --application-name "docker-react" \
-            --environment-name "Docker-react-env" --version-label ${{ github.sha }}
+          aws s3 cp deploy.zip s3://elasticbeanstalk-ap-south-1-798114842310/deploy-${{ github.sha }}.zip
+
+      # Deploy to Elastic Beanstalk
+      - name: Deploy to AWS Elastic Beanstalk
+        uses: einaregilsson/beanstalk-deploy@v21
+        with:
+          aws_access_key: ${{ secrets.AWS_ACCESS_KEY }}
+          aws_secret_key: ${{ secrets.AWS_SECRET_KEY }}
+          application_name: "docker-react"
+          environment_name: "Docker-react-env"
+          region: "ap-south-1"
+          version_label: "docker-react-${{ github.sha }}"
+          deployment_package: deploy.zip
