Added deployment steps

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -25,3 +25,24 @@ jobs:
 
       - name: Run tests inside Docker container
         run: docker run -e CI=true anshultaklikar/docker-react npm run test -- --coverage
+
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout source code
+        uses: actions/checkout@v2
+
+      - name: Generate deployment package
+        run: zip -r deploy.zip . -x '*.git*'
+      
+      - name: Deploy to EB
+        uses: einaregilsson/beanstalk-deploy@v21
+        with:
+          aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          application_name: MyApplicationName
+          environment_name: MyApplication-Environment
+          version_label: ${{ github.sha }}
+          existing_bucket_name: MyBucketName
+          region: us-west-2
+          deployment_package: deploy.zip
